extract Aardvark.Base.Telemetry

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -24,5 +24,8 @@
   <ItemGroup>
     <None Include="**\*_template.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Aardvark.Base.Telemetry\Aardvark.Base.Telemetry.csproj" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
