--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Geometry\Hull2dTests.cs" />
     <Compile Include="Geometry\Hull3dTests.cs" />
     <Compile Include="Geometry\PolygonClipping.cs" />
+    <Compile Include="Images\SystemDrawingTests.cs" />
     <Compile Include="Math\ColorTests.cs" />
     <Compile Include="Math\PolynomialTests.cs" />
     <Compile Include="Plane\PlaneTest.cs" />
@@ -79,6 +80,10 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Aardvark.Base.Extensions.SystemDrawing\Aardvark.Base.Extensions.SystemDrawing.csproj">
+      <Project>{599ba682-70ef-4d1e-a4c1-a36359482f87}</Project>
+      <Name>Aardvark.Base.Extensions.SystemDrawing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Telemetry\Aardvark.Base.Telemetry.csproj">
       <Project>{b1593a50-6412-401f-ac89-433f426a8fd5}</Project>
       <Name>Aardvark.Base.Telemetry</Name>
