--- a/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
+++ b/src/Aardvark.Base.Extensions.SystemDrawing/Aardvark.Base.Extensions.SystemDrawing.csproj
@@ -53,5 +53,8 @@
       <Name>Aardvark.Base</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="paket.template" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
