tests and fixes

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="AlgoDat\SortingTests.cs" />
     <Compile Include="Extensions\Hashes.cs" />
     <Compile Include="Extensions\ListHeapTests.cs" />
+    <Compile Include="Geometry\Plane3dTests.cs" />
     <Compile Include="Geometry\Circle2dTests.cs" />
     <Compile Include="Geometry\Hull2dTests.cs" />
     <Compile Include="Geometry\Hull3dTests.cs" />
