--- a/src/Aardvark.Base.Telemetry/Aardvark.Base.Telemetry.csproj
+++ b/src/Aardvark.Base.Telemetry/Aardvark.Base.Telemetry.csproj
@@ -9,8 +9,8 @@
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\bin\Debug</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Telemetry.xml</DocumentationFile>
+    <OutputPath>..\..\bin\Release\netstandard2.0\</OutputPath>
+    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Telemetry.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
