--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -24,12 +24,15 @@
     <Compile Include="Mod\History.fs" />
     <Compile Include="AdaptiveSet\asetcore.fs" />
     <Compile Include="AdaptiveSet\cset.fs" />
+    <Compile Include="AdaptiveSet\mset.fs" />
     <Compile Include="AdaptiveSet\aset.fs" />
     <Compile Include="AdaptiveList\alistcore.fs" />
     <Compile Include="AdaptiveList\clist.fs" />
     <Compile Include="AdaptiveList\corderedset.fs" />
+    <Compile Include="AdaptiveList\mlist.fs" />
     <Compile Include="AdaptiveList\alist.fs" />
     <Compile Include="AdaptiveMap\amapcore.fs" />
+    <Compile Include="AdaptiveMap\mmap.fs" />
     <Compile Include="AdaptiveMap\cmap.fs" />
     <Compile Include="AdaptiveMap\amap.fs" />
     <Compile Include="AdaptiveFunc\AdaptiveFunc.fs" />
