--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: csharp
-solution: src/Aardvark.sln
-before_install:
+before_install: 
   # Make sure mono is installed,
   # pipe stdout to dev/null because qq is still too chatty
+  - wget -q https://packages.microsoft.com/config/ubuntu/14.04/packages-microsoft-prod.deb
+  - sudo dpkg -i packages-microsoft-prod.deb
+  - sudo apt-get install apt-transport-https -qq > /dev/null
   - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq mono-devel > /dev/null
-  - mozroots --import --sync > /dev/null
-script: sh ./build.sh
-dist: trusty
+  - sudo apt-get install -qq mono-devel dotnet-sdk-2.1 > /dev/null
+  - mozroots --import --sync 
+script:
+  - mono .paket/paket.bootstrapper.exe
+  - mono .paket/paket.exe restore
+  - ./build.sh
