--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+solution: src/Aardvark.sln
 before_install: 
   # Make sure mono is installed,
   # pipe stdout to dev/null because qq is still too chatty
@@ -9,7 +10,6 @@ before_install:
   - sudo apt-get install -qq mono-devel dotnet-sdk-2.1 > /dev/null
   - mozroots --import --sync 
   - mcs --version
-script:
   - mono .paket/paket.bootstrapper.exe
   - mono .paket/paket.exe restore
-  - ./build.sh
+
