added tests for julian day calculation;

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AlgoDat\DictTests.cs" />
     <Compile Include="AlgoDat\HigherOrderFunctionsTests.cs" />
     <Compile Include="AlgoDat\SortingTests.cs" />
+    <Compile Include="Extensions\DateTime.cs" />
     <Compile Include="Extensions\Hashes.cs" />
     <Compile Include="Extensions\ListHeapTests.cs" />
     <Compile Include="Geometry\IntersectionTestsTests.cs" />
