--- a/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
+++ b/src/Aardvark.Geometry/Aardvark.Geometry.fsproj
@@ -28,5 +28,8 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Unofficial.LibTessDotNet" Version="2.0.2" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
