[Base.Rendering] resolved TextureFilter hash collisions;

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Math\ColorTests.cs" />
     <Compile Include="Math\PolynomialTests.cs" />
     <Compile Include="Math\Distributions.cs" />
+    <Compile Include="Other\SamplerStateTest.cs" />
     <Compile Include="Plane\PlaneTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
