--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangesBoxes\BoxTests.cs" />
     <Compile Include="RangesBoxes\CellTests.cs" />
+    <Compile Include="Reporting\ReportingTests.cs" />
     <Compile Include="Telemetry\TelemetryTests.cs" />
     <Compile Include="Tensors\TensorMatrixTests.cs" />
     <Compile Include="TestSuite\TestSuite.cs" />
