--- a/src/Demo/Scratch/Scratch.fsproj
+++ b/src/Demo/Scratch/Scratch.fsproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\..\packages\SourceLink.Embed.PaketFiles\build\SourceLink.Embed.PaketFiles.props" Condition="Exists('..\..\..\packages\SourceLink.Embed.PaketFiles\build\SourceLink.Embed.PaketFiles.props')" Label="Paket" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -420,4 +421,5 @@
       </ItemGroup>
     </When>
   </Choose>
+  <Import Project="..\..\..\packages\SourceLink.Embed.PaketFiles\build\SourceLink.Embed.PaketFiles.targets" Condition="Exists('..\..\..\packages\SourceLink.Embed.PaketFiles\build\SourceLink.Embed.PaketFiles.targets')" Label="Paket" />
 </Project>
