--- a/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.FSharp.Tests/Aardvark.Base.FSharp.Tests.fsproj
@@ -14,6 +14,7 @@
 	<RunWorkingDirectory>$(OutputPath)\netcoreapp2.0</RunWorkingDirectory>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CachesTest.fs" />
     <Compile Include="TimeTests.fs" />
     <Compile Include="PureAgTests.fs" />
     <Compile Include="NativeMemory.fs" />
@@ -24,6 +25,7 @@
     <Compile Include="HSet.fs" />
     <Compile Include="PList.fs" />
     <Compile Include="MapExt.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Aardvark.Base.FSharp\Aardvark.Base.FSharp.fsproj" />
