[Test] added option to prevent Microsoft.NET.Test.Sdk to auto-generate a Main so we can have our own (command line "dotnet test" still works);

--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <PropertyGroup>
 	<RunWorkingDirectory>$(OutputPath)\netcoreapp2.0</RunWorkingDirectory>
+	<GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Aardvark.Base.Telemetry\Aardvark.Base.Telemetry.csproj" />
